# reporter

./: .dockerignore  .env.example  .gitignore  .importlinter  CLAUDE.md  Makefile  README.md  crontab.example  pyproject.toml  ref.md
api/: .env.example  .importlinter  Dockerfile  README.md  pyproject.toml
api/app/: config.py  main.py  scheduler.py  schemas.py  tui.py
api/app/adapters/: __init__.py
api/app/adapters/dart/: __init__.py  (+4 more)
api/app/db/: models.py  session.py
api/app/domain/: __init__.py  analysis_scoring.py  beta.py  candle.py  deepdive_rules.py  disclosure.py  elliott.py  event_keywords.py  financials.py  forward.py  judgment.py  market_structure.py  portfolio.py  relative_strength.py  rs_rating.py  score_factors.py  scoring.py  stage.py  technicals.py  us_financials.py  valuation.py
api/app/ports/: __init__.py  disclosure.py  financial_ontology.py  llm.py  market_data.py  repositories.py
api/app/routers/: admin.py  broadcasts.py  calendar.py  companies.py  deepdive.py  industries.py  ir_interview.py  market.py  ontology.py  portfolio.py  realtime.py  screener.py  today.py  us.py
api/app/services/: admin_status.py  analysis.py  analysis_comment.py  broadcast_ingest.py  calendar_ingest.py  calendar_llm.py  candle_ingest.py  candle_service.py  chart.py  company_service.py  customs.py  dart.py  dart_ingest.py  dart_report_parser.py  fallback_store.py  financials_backfill.py  growth.py  growth_ingest.py  industry_service.py  ingest.py  ingest_log.py  intraday.py  ir_interview.py  kis.py  market_peg_ingest.py  market_premium_ingest.py  market_quote.py  news_events.py  ontology.py  portfolio.py  quote.py  realtime.py  related_company_ingest.py  report_ingest.py  risk_free_ingest.py  rs_rating_ingest.py  schedule_control.py  screener_service.py  sector_flow.py  sector_ingest.py  (+15 more)
api/app/storage/: minio_store.py
api/tests/: test_admin_status.py  test_analysis.py  test_analysis_comment.py  test_article_crawler.py  test_backfill_progressive.py  test_beta.py  test_broadcast_ingest.py  test_calendar.py  test_candle_batch.py  test_candle_service.py  test_chart.py  test_comment_context.py  test_company_search.py  test_coverage_reports.py  test_customs.py  test_dart.py  test_dart_dividend.py  test_dart_ontology_coverage.py  test_dart_related.py  test_dart_report_parser.py  test_dart_roe.py  test_dart_shareholders.py  test_dart_stock_total.py  test_dart_throttle.py  test_deepdive_claim.py  test_deepdive_freshness.py  test_deepdive_share.py  test_deepdive_tools.py  test_deepdive_verdict.py  test_domain_analysis_scoring.py  test_domain_financials.py  test_domain_judgment.py  test_domain_portfolio.py  test_domain_score_factors.py  test_domain_scoring.py  test_elliott.py  test_event_keywords.py  test_financials_backfill.py  test_financials_reconcile.py  test_forward_multiple.py  (+48 more)
api/tests/fixtures/: sec_nvda_facts.json
financial-ontology/python/: .gitignore  pyproject.toml
financial-ontology/python/financial_ontology/: __init__.py  _eval.py  graph.py  loader.py  models.py  normalizer.py  ratios.py
(+273 files in other folders)
