[project]
name = "reporter"
version = "0.1.0"
description = "매일 아침 증권사 리포트를 수집·분석해 텔레그램으로 브리핑하는 시스템 (Ollama Cloud GLM)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
]

[project.scripts]
reporter = "reporter.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reporter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["reporter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
