[project]
name = "reporter-api"
version = "0.1.0"
description = "reporter 웹서비스 백엔드 (FastAPI). 기존 reporter 패키지의 크롤·PDF·GLM 로직을 재사용한다."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "minio>=7.2",
    "apscheduler>=3.10",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # 기존 크롤/PDF/GLM 로직 재사용을 위해 루트 reporter 패키지를 editable 로 참조
    "reporter",
    "textual>=8.2.8",
]

[project.scripts]
reporter-api = "app.main:run"
reporter-worker = "app.scheduler:main"
reporter-tui = "app.tui:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "pytest-asyncio>=1.4.0",
    "import-linter>=2.13",
]

[tool.uv.sources]
reporter = { path = "..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]
# 밸류에이션 등 사용자 노출 수식 서술에 쓰는 수학 기호. ASCII 오인(RUF001~003) 경고 억제.
allowed-confusables = ["×", "−", "÷"]

[tool.ruff.lint.isort]
known-first-party = ["app", "reporter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
