[project]
name = "financial-ontology"
version = "1.0.0"
description = "재무 온톨로지 로더·정규화·비율엔진. DART(K-IFRS)/IFRS/US GAAP 재무제표 계정을 단일 온톨로지 ID로 정규화하고 비율을 평가한다."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["financial_ontology"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["financial_ontology"]

[tool.pytest.ini_options]
testpaths = ["tests"]